--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,4 +1,15 @@
-img {
-  width: 50%;
-  height: 50%;
+/* Structure */
+.container {
+  margin-bottom: 5%;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
