--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -1,283 +1,143 @@
 <router-outlet></router-outlet>
 
-<div class="container" *ngIf="mainNews">
+<div class="container" *ngIf="!isNews && !isArticle && !isFilm">
+  <div class="row article_box" dir="rtl" *ngIf="isLearn">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
+      <h1>
+        عنوان مجموعه خبر
+        <a href="/learn/article">مشاهده بیشتر</a>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-  <mat-tab-group mat-align-tabs="center" *ngIf="isLearn">
-    <mat-tab label="نمایش همه">
-      <div class="row article_box" dir="rtl" *ngIf="isLearn">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
-          <h1>
-            عنوان مجموعه خبر
-            <a href="/learn/article">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+  </div>
+
+  <mat-divider style="margin-top: 7%;"></mat-divider>
+
+  <div class="row video_box" dir="rtl" *ngIf="isLearn">
+    <div class="col-lg-12 title">
+      <h1>
+        عنوان مجموعه فیلم
+        <a href="/learn/film">مشاهده بیشتر</a>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/film/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <a href="/learn/film/id" class="play_icon">
+            <img src="../../../assets/play.png" alt="">
           </a>
-        </div>
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/film/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <a href="/learn/film/id" class="play_icon">
+            <img src="../../../assets/play.png" alt="">
           </a>
-        </div>
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/film/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <a href="/learn/film/id" class="play_icon">
+            <img src="../../../assets/play.png" alt="">
           </a>
-        </div>
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/film/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <a href="/learn/film/id" class="play_icon">
+            <img src="../../../assets/play.png" alt="">
           </a>
-        </div>
-      </div>
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+  </div>
+</div>
 
-      <mat-divider style="margin-top: 7%;"></mat-divider>
-
-      <div class="row video_box" dir="rtl" *ngIf="isLearn">
-        <div class="col-lg-12 title">
-          <h1>
-            عنوان مجموعه فیلم
-            <a href="/learn/film">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-      </div>
-
-    </mat-tab>
-
-    <mat-tab label="مقالات">
-      <div class="row article_box" dir="rtl" *ngIf="isLearn">
-        <div class="col-lg-12 title">
-          <h1>
-            عنوان مجموعه خبر
-            <a href="/learn/article">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/article/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-      </div>
-    </mat-tab>
-    <mat-tab label="ویدئوها">
-      <div class="row video_box" dir="rtl" *ngIf="isLearn">
-        <div class="col-lg-12 title">
-          <h1>
-            عنوان مجموعه فیلم
-            <a href="/learn/film">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/learn/film/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <a href="/learn/film/id" class="play_icon">
-                <img src="../../../assets/play.png" alt="">
-              </a>
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-      </div>
-    </mat-tab>
-  </mat-tab-group>
-
-
-  <div class="row article_box" dir="rtl" *ngIf="isArticle">
+<div class="container" *ngIf="isArticle">
+  <div class="row article_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>عنوان مجموعه خبر</h1>
     </div>
@@ -333,10 +193,10 @@
       </a>
     </div>
   </div>
+</div>
 
-  <mat-divider *ngIf="isArticle"></mat-divider>
-
-  <div class="row video_box" dir="rtl" *ngIf="isFilm">
+<div class="container" *ngIf="isFilm">
+  <div class="row video_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>عنوان مجموعه فیلم</h1>
     </div>
@@ -404,10 +264,10 @@
       </a>
     </div>
   </div>
+</div>
 
-  <mat-divider *ngIf="isFilm"></mat-divider>
-
-  <div class="row news_box" dir="rtl" *ngIf="isNews">
+<div class="container" *ngIf="isNews">
+  <div class="row news_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>هاعنوان مجموعه خبر</h1>
     </div>
