--- a/src/app/modules/add-post/add-post.component.html
+++ b/src/app/modules/add-post/add-post.component.html
@@ -2,12 +2,16 @@
   <div class="row">
 
     <div class="col-lg-12">
-      <form>
+
+      <form
+        [formGroup]="formArticle"
+        (ngSubmit)="submitForm()"
+        *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
         <div class="row">
 
           <div class="col-lg-3">
             <h3>عکس موضوع را انتخاب کنید</h3>
-            <input type='file' name="image" (change)="readURL($event);"/>
+            <input type='file' name="image" (change)="uploadFile($event)"/>
           </div>
           <div class="col-lg-9"></div><br>
 
@@ -20,47 +24,97 @@
 
           <div class="col-lg-4">
             <h3>عنوان پست را انتخاب کنید</h3>
-            <input type="text" name="title" [(ngModel)]="mainTitle">
+            <input type="text" name="title" formControlName="title">
           </div>
           <div class="col-lg-9"></div><br>
 
           <div class="col-lg-9">
             <h3>خلاصه ای از پست را وارد نمایید</h3>
-            <textarea name="description" [(ngModel)]="mainDesc" cols="30" rows="5" style="width: 100%;"></textarea>
+            <textarea name="description" formControlName="description" cols="30" rows="5" style="width: 100%;"></textarea>
+          </div>
+
+          <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
+            <h2>پست خود را ایجاد نمایید</h2>
+            <div class="editor_box">
+              <ckeditor
+                [editor]="Editor"
+                (ready)="onReady($event)"
+                formControlName="content"
+                ></ckeditor>
+            </div>
+          </div>
+
+          <div class="col-lg-3" *ngIf="postType == 'film'">
+            <div class="video_input">
+              <h3>ویدئو خود را انتخاب نمایید</h3>
+              <input type='file' name="video" (change)="readFile($event, 'video');" />
+            </div>
+          </div>
+
+          <div class="col-lg-3" *ngIf="postType == 'file'">
+            <div class="video_input">
+              <h3>فایل خود را انتخاب نمایید</h3>
+              <input type='file' name="file" (change)="readFile($event, 'file');" />
+            </div>
+          </div>
+
+          <div class="col-lg-12">
+            <button mat-raised-button color="primary">ذخیره اطلاعات</button>
           </div>
 
         </div>
       </form>
-    </div>
 
-    <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
-      <h2>پست خود را ایجاد نمایید</h2>
-      <div class="editor_box">
-        <ckeditor
-          [editor]="Editor"
-          (change)="loadData()"
-          (ready)="onReady($event)"
-          [(ngModel)]="ckeditorContent"
-          data="<p>Hello, world!</p>"></ckeditor>
-      </div>
-    </div>
+      <!-- ====================================================================  -->
 
-    <div class="col-lg-3" *ngIf="postType == 'film'">
-      <div class="video_input">
-        <h3>ویدئو خود را انتخاب نمایید</h3>
-        <input type='file' name="video" (change)="readFile($event, 'video');" />
-      </div>
-    </div>
+      <form [formGroup]="formFile" (ngSubmit)="submitForm()" *ngIf="postType != 'article'">
+        <div class="row">
 
-    <div class="col-lg-3" *ngIf="postType == 'file'">
-      <div class="video_input">
-        <h3>فایل خود را انتخاب نمایید</h3>
-        <input type='file' name="file" (change)="readFile($event, 'file');" />
-      </div>
-    </div>
+          <div class="col-lg-3">
+            <h3>عکس موضوع را انتخاب کنید</h3>
+            <input type='file' name="image" (change)="uploadFile($event)"/>
+          </div>
+          <div class="col-lg-9"></div><br>
 
-    <div class="col-lg-12">
-      <button mat-raised-button color="primary" (click)="send()">ذخیره اطلاعات</button>
+          <div class="col-lg-4 image_pre" *ngIf="imageSrc != ''">
+            <p style="text-align: right;">
+              <img [src]="imageSrc" *ngIf="imageSrc != '' "/>
+            </p>
+          </div>
+          <div class="col-lg-9"></div><br>
+
+          <div class="col-lg-4">
+            <h3>عنوان پست را انتخاب کنید</h3>
+            <input type="text" name="title" formControlName="title">
+          </div>
+          <div class="col-lg-9"></div><br>
+
+          <div class="col-lg-9">
+            <h3>خلاصه ای از پست را وارد نمایید</h3>
+            <textarea name="description" formControlName="description" cols="30" rows="5" style="width: 100%;"></textarea>
+          </div>
+
+          <div class="col-lg-3" *ngIf="postType == 'film'">
+            <div class="video_input">
+              <h3>ویدئو خود را انتخاب نمایید</h3>
+              <input type='file' name="video" (change)="readFile($event, 'video');" />
+            </div>
+          </div>
+
+          <div class="col-lg-3" *ngIf="postType == 'file'">
+            <div class="video_input">
+              <h3>فایل خود را انتخاب نمایید</h3>
+              <input type='file' name="file" (change)="readFile($event, 'file');" />
+            </div>
+          </div>
+
+          <div class="col-lg-12">
+            <button mat-raised-button color="primary">ذخیره اطلاعات</button>
+          </div>
+
+        </div>
+      </form>
+
     </div>
   </div>
 </div>
